[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/res/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/scripts/mainmenu/CameraPosition.gd" type="Script" id=2]
[ext_resource path="res://src/scripts/mainmenu/TitleGUI.gd" type="Script" id=3]
[ext_resource path="res://src/scripts/mainmenu/SettingsGUI.gd" type="Script" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 0.4
anchor_bottom = 0.4
theme = ExtResource( 1 )

[node name="CameraPosition" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="CameraPosition"]
anchor_mode = 0
current = true
zoom = Vector2( 0.4, 0.4 )
smoothing_enabled = true

[node name="Background" type="ColorRect" parent="."]
anchor_right = 2.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TitleScreenBoundary" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
border_width = 2.0

[node name="TitleGUI" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.4
grow_horizontal = 2
alignment = 1
script = ExtResource( 3 )

[node name="Title" type="Label" parent="TitleGUI"]
margin_right = 118.0
margin_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
text = "LUNÃ‰TABLEAU
(Alpha)"
align = 1

[node name="Version" type="Label" parent="TitleGUI"]
margin_top = 49.0
margin_right = 118.0
margin_bottom = 70.5
text = " a.0.2"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="TitleGUI"]
margin_top = 75.0
margin_right = 118.0
margin_bottom = 102.5
text = "Start Game"

[node name="SettingsButton" type="Button" parent="TitleGUI"]
margin_top = 106.0
margin_right = 118.0
margin_bottom = 133.5
text = "Settings"

[node name="SettingsScreenBoundary" type="ReferenceRect" parent="."]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
border_color = Color( 0, 0, 1, 1 )
border_width = 2.0

[node name="SettingsMenuAnchor" type="CenterContainer" parent="."]
anchor_left = 1.5
anchor_top = 0.4
anchor_right = 2.0
anchor_bottom = 0.8
margin_bottom = 0.199997
use_top_left = true

[node name="SettingsGUI" type="VBoxContainer" parent="SettingsMenuAnchor"]
margin_left = -102.0
margin_top = -83.0
margin_right = 102.0
margin_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource( 4 )

[node name="VideoLabel" type="Label" parent="SettingsMenuAnchor/SettingsGUI"]
margin_top = -1.0
margin_right = 204.0
margin_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "Video"
align = 1

[node name="GFXSwitch" type="CheckButton" parent="SettingsMenuAnchor/SettingsGUI"]
margin_top = 25.0
margin_right = 204.75
margin_bottom = 65.0
pressed = true
text = "Graphical Effects"

[node name="AccessibilityLabel" type="Label" parent="SettingsMenuAnchor/SettingsGUI"]
margin_top = 68.0
margin_right = 204.0
margin_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2
text = "Accessibility"
align = 1

[node name="AutofireSwitch" type="CheckButton" parent="SettingsMenuAnchor/SettingsGUI"]
margin_top = 94.0
margin_right = 204.0
margin_bottom = 134.0
text = "Autofire"

[node name="BackButton" type="Button" parent="SettingsMenuAnchor/SettingsGUI"]
margin_top = 138.0
margin_right = 204.0
margin_bottom = 165.5
text = "Back"

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsMenuAnchor"]
grow_horizontal = 2
rect_clip_content = false
scroll_horizontal_enabled = false

[connection signal="pressed" from="TitleGUI/StartButton" to="TitleGUI" method="_on_StartButton_pressed"]
[connection signal="pressed" from="TitleGUI/SettingsButton" to="CameraPosition" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="SettingsMenuAnchor/SettingsGUI/BackButton" to="CameraPosition" method="_on_BackButton_pressed"]
[connection signal="pressed" from="SettingsMenuAnchor/SettingsGUI/BackButton" to="SettingsMenuAnchor/SettingsGUI" method="_on_BackButton_pressed"]
